fix: select2 dropdown long text getting overflow outside container

--- a/src/scss/filejet-scss/entities/_entities.scss
+++ b/src/scss/filejet-scss/entities/_entities.scss
@@ -196,6 +196,7 @@
             border: transparent;
             .select2-selection__rendered{
                 height: 56px;
+                max-width: 500px;
                 @extend .d-flex,.align-items-center;
             }
             .select2-selection__arrow{
